--- a/SerenApp.Infrastructure/SerenApp.Infrastructure.csproj
+++ b/SerenApp.Infrastructure/SerenApp.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SerenApp.Core\SerenApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
