[ZANETTI] Added eventshub and table service

--- a/SugoCode.EventHubs/SugoCode.EventHubs.csproj
+++ b/SugoCode.EventHubs/SugoCode.EventHubs.csproj
@@ -11,13 +11,14 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SerenApp.Core\SerenApp.Core.csproj" />
+    <ProjectReference Include="..\SerenApp.Infrastructure\SerenApp.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
