--- a/SerenApp.Web/appsettings.json
+++ b/SerenApp.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalSql": "Server=127.0.0.1,1433;Initial Catalog=db;User ID=sa;Password=Admin1234!;Connection Timeout=10;"
+  }
 }
