--- a/SerenApp.Web/appsettings.json
+++ b/SerenApp.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "AzureSql": "Server=tcp:sugococde-db-server.database.windows.net,1433;Initial Catalog=sugococde-db-sql;Persist Security Info=False;User ID=itsuser;Password=Sugocode1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "LocalSql": "Server=127.0.0.1,1433;Initial Catalog=db;User ID=sa;Password=Admin1234!;Connection Timeout=10;"
   }
 }
