--- a/SerenApp.Web/appsettings.Development.json
+++ b/SerenApp.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AzureSql": "Server=tcp:sugococde-db-server.database.windows.net,1433;Initial Catalog=sugococde-db-sql;Persist Security Info=False;User ID=itsuser;Password=Sugocode1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "LocalSql": "Server=tcp:sugococde-db-server.database.windows.net,1433;Initial Catalog=sugococde-db-sql;Persist Security Info=False;User ID=itsuser;Password=Sugocode1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
