--- a/SerenApp.Web/Properties/launchSettings.json
+++ b/SerenApp.Web/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:7126;http://localhost:5126",
       "dotnetRunMessages": true
