[FIXED] System.Text.Json Parsing in MapToDeviceDataTable

--- a/SugoCode.EventHubs/SugoCode.EventHubs.csproj
+++ b/SugoCode.EventHubs/SugoCode.EventHubs.csproj
@@ -20,7 +20,7 @@
     </None>
     <None Update="local.settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
   </ItemGroup>
 </Project>
